# pointed-word

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pointed-word.cabal  pointed-word.nix
.github/workflows/: haskell-ci.yml
src/: PointedWord.hs
src/PointedWord/: Core.hs  Eps.hs
